--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     }
   },
   "devDependencies": {
-    "electron": "^28.2.3",
-    "electron-builder": "24.6.0"
+    "electron": "^28.3.3",
+    "electron-builder": "^24.6.0"
   },
   "dependencies": {
-    "node-thermal-printer": "^4.0.6"
+    "electron-store": "^8.2.0",
+    "pdf-to-printer": "^5.6.0",
+    "pdfkit": "^0.15.0"
   }
 }
